# TimeSheet/src/main/java/projekat/models/Teammember.java
@@ -8,19 +8,23 @@ import com.fasterxml.jackson.annotation.JsonIgnore;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
 import projekat.enums.TeamMemberRoles;
 
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 
 
 /**
  * The persistent class for the teammember database table.
- * 
+ *
  */
 @Entity
 @Getter @Setter @NoArgsConstructor
 @NamedQuery(name="Teammember.findAll", query="SELECT t FROM Teammember t")
-public class Teammember implements Serializable {
+public class Teammember implements Serializable, UserDetails {
 	private static final long serialVersionUID = 1L;
 
 	@Id
@@ -41,8 +45,40 @@ public class Teammember implements Serializable {
 
 	private String username;
 
+	private String password;
+
 	//bi-directional many-to-one association to Project
 	@JsonIgnore
 	@OneToMany(mappedBy="teammember")
 	private List<Project> projects;
+
+	public Teammember(String username, String password, ArrayList<Object> objects) {
+		this.username = username;
+		this.password = password;
+	}
+
+	@Override
+	public Collection<? extends GrantedAuthority> getAuthorities() {
+		return null;
+	}
+
+	@Override
+	public boolean isAccountNonExpired() {
+		return false;
+	}
+
+	@Override
+	public boolean isAccountNonLocked() {
+		return false;
+	}
+
+	@Override
+	public boolean isCredentialsNonExpired() {
+		return false;
+	}
+
+	@Override
+	public boolean isEnabled() {
+		return false;
+	}
 }
