# TimeSheet/src/main/resources/OpenApi.yml
@@ -822,6 +822,10 @@ components:
           description: The username of TeamMember
           type: string
           pattern: ^(?!\s*$).+
+        password:
+          description: The password of TeamMember
+          type: string
+          pattern: ^(?!\s*$).+
         email:
           description: The email of TeamMember
           type: string
@@ -836,6 +840,7 @@ components:
         - name
         - username
         - email
+        - password
 
     TimeSheetEntryDTO:
       description: This is an object that represents one user entry
@@ -1004,3 +1009,19 @@ components:
           pattern: ^(?!\s*$).+
       required:
         - name
+    LoginDTO:
+      description: This object represents parameters for login
+      type: object
+      properties:
+        username:
+          description: username
+          type: string
+          pattern: ^(?!\s*$).+
+        password:
+          description: password
+          type: string
+          pattern: ^(?!\s*$).+
+      required:
+        - username
+        - password
+
